Fix current lists overflowing their div on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,8 +271,11 @@ body{
 .current-lists {
     order: 2;
     border: none;
-    padding: 0 0 10px;
+    padding: 5px 0 15px;
     max-height: 200px;
+}
+.current-lists .lists-list-title {
+   margin-bottom: 0;
 }
 .btn-group{
     width:100%;
@@ -319,7 +322,7 @@ section{
     background-size: 110px 30px;
 }
 #date-and-time{
-    max-width: 165px;
+    max-width: 160px;
     font-size: small;
 }
 }
